feat: AdminService 用户列表补充飞书 User ID / Open ID 字段
补上一次提交遗漏的部分：getAllUsers 改用 toUserMap 复用单用户
序列化逻辑，避免两处字段列表漂移；toUserMap 补充 feishuUserId/
feishuOpenId，供用户管理列表显示。

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>